--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".ManagerDashboard"></activity>
+        <activity android:name=".edit_orders"></activity>
+        <activity android:name=".orders" />
+        <activity android:name=".Grocery" />
+        <activity android:name=".OnBoard" />
+        <activity android:name=".ManagerEmployee" />
+        <activity android:name=".AddNewDeliveryBoy" />
+        <activity android:name=".ManagerDashboard" />
         <activity android:name=".Signup_From" />
         <activity android:name=".MainActivity">
             <intent-filter>
