--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,16 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".edit_orders"></activity>
+        <activity android:name=".on_board"></activity>
+        <activity android:name=".veg_category" />
+        <activity android:name=".fruit_category" />
+        <activity android:name=".edit_product" />
+        <activity android:name=".products" />
+        <activity android:name=".new_product" />
+        <activity android:name=".dashboard" />
+        <activity android:name=".edit_orders" />
         <activity android:name=".orders" />
         <activity android:name=".Grocery" />
-        <activity android:name=".OnBoard" />
         <activity android:name=".ManagerEmployee" />
         <activity android:name=".AddNewDeliveryBoy" />
         <activity android:name=".ManagerDashboard" />
