--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,6 +22,9 @@
         <activity android:name=".ManagerEmployee" />
         <activity android:name=".AddNewDeliveryBoy" />
         <activity android:name=".ManagerDashboard" />
+        <activity android:name=".DeliveryProfile" />
+        <activity android:name=".DeliveryReport" />
+        <activity android:name=".OrderList" />
         <activity android:name=".Signup_From" />
         <activity android:name=".MainActivity">
             <intent-filter>
