--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Remove_Product"></activity>
+        <activity android:name=".Remove_Driver"></activity>
+        <activity android:name=".Remove_Product" />
         <activity android:name=".product_remove" />
         <activity android:name=".update_delivery" />
         <activity android:name=".cus_view" />
