--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,4 +32,7 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.android.support:viewpager:28.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+
+
+    compile 'com.cepheuen.elegant-number-button:lib:1.0.2'
 }
