--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Search_Product"></activity>
+        <activity android:name=".Update_Delivery_report"></activity>
+        <activity android:name=".Search_Product" />
         <activity android:name=".remove_delivery_report" />
         <activity android:name=".Remove_Driver" />
         <activity android:name=".Remove_Product" />
