--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,11 +22,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.0.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.firebase:firebase-storage:16.0.4'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.firebaseui:firebase-ui-database:0.4.0'
+//    implementation 'com.android.support:recyclerview-v7:28.0.0'
+//    implementation 'com.android.support:cardview-v7:28.0.0'
+
+
+    implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
+
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
@@ -34,7 +42,9 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     // implementation 'com.android.support:viewpager:28.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
+//    implementation 'androidx.recycleview:recycleview:1.0.0'
 
 
     // implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 }
+apply plugin: 'com.google.gms.google-services'
