--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,8 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
 //    implementation 'androidx.recycleview:recycleview:1.0.0'
 
-
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     // implementation 'com.cepheuen.elegant-number-button:lib:1.0.2'
 }
 apply plugin: 'com.google.gms.google-services'
